--- a/src/components/AdminPanel/adminlog.module.scss
+++ b/src/components/AdminPanel/adminlog.module.scss
@@ -1,6 +1,5 @@
 .adminlog {
 	width: 100%;
-	height: calc(100vh - 50px);
 	padding: 0 15%;
 	margin-top: 100px;
 
@@ -34,9 +33,72 @@
 		}
 	}
 
+	.calculateLog {
+		width: 100%;
+		min-height: 700px;
+		height: auto;
+		border: 1px solid rgba(0,0,0,.5);
+		padding: 20px;
+		margin: 50px 0;
+
+		.calculateData {
+			h2 {
+				font-family: 'Roboto';
+				font-weight: bold;
+				font-size: 28px;
+				text-align: center;
+				margin-bottom: 20px;
+				padding-bottom: 20px;
+				border-bottom: 2px solid rgba(0,0,0, .5);
+				color: rgba(0,0,0, .5);
+				margin-top: 20px;
+			}
+
+			h3 {
+				font-family: 'Roboto';
+				font-size: 16px;
+				font-weight: 400;
+				color: rgba(0,0,0, .5);
+				margin: 10px 0;
+			}
+
+			input {
+				width: 100%;
+				height: 28px;
+				padding-left: 19px;
+				font-family: 'Roboto';
+				font-size: 16px;
+				border-radius: 5px;
+				border: 2px solid rgba(0,0,0, .3);
+				color: rgba(0,0,0, .5);
+				outline: none;
+			}
+		}
+
+		.save {
+			width: 250px;
+			height: 45px;
+			border: 2px solid royalblue;
+			color: royalblue;
+			font-family: 'Roboto';
+			font-size: 16px;
+			font-weight: bold;
+			background-color: #fff;
+			border-radius: 10px;
+			margin-top: 20px;
+			cursor: pointer;
+			transition: .2s all;
+
+			&:hover {
+				scale: 1.03;
+				transition: .2s all;
+			}
+		}
+	}
+
 	.userLog {
 		width: 100%;
-		height: 700px;
+		min-height: 700px;
 		border: 1px solid rgba(0,0,0,.5);
 		padding: 20px;
 		overflow-y: auto;
@@ -137,6 +199,16 @@
 				td {
 					padding: 4px;
 				}
+			}
+		}
+	}
+}
+
+@media (max-width: 420px) {
+	.adminlog {
+		.btnTable {
+			h2 {
+				font-size: 20px;
 			}
 		}
 	}
