--- a/src/components/Product/product.module.scss
+++ b/src/components/Product/product.module.scss
@@ -53,6 +53,7 @@
 		min-height: 500px;
 		border: 3px solid rgb(248, 248, 248);
 		margin-bottom: 100px;
+		overflow-y: auto;
 	}
 }
 
@@ -93,6 +94,7 @@
 			font-size: 14px;
 		}
 		.premium {
+			flex-direction: column;
 			img {
 				width: 120;
 				height: 120px;
