--- a/src/components/Calculate/calculate.module.scss
+++ b/src/components/Calculate/calculate.module.scss
@@ -55,9 +55,9 @@
 			margin-bottom: 10px;
 			margin-top: 10px;
 			
-			.radio {
-				width: 20px;
-				height: 20px;
+			.checkbox {
+				width: 15px;
+				height: 15px;
 			}
 
 			h4 {
