--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,4 +1,6 @@
 .header {
+	position: relative;
+
 	.airBlock {
 		width: 100%;
 		height: 90px;
@@ -114,12 +116,69 @@
 			}
 		}
 	}
+
+	.popup {
+		width: auto;
+		height: auto;
+		position: absolute;
+		left: 15%;
+		background-color: rgba(0,0,0,.4);
+		z-index: 999;
+		padding: 15px;
+		display: flex;
+		flex-direction: column;
+		gap: 10px;
+		transition: .3s all;
+		opacity: 0;
+		visibility: hidden;
+		top: 90px;
+
+		h2 {
+			font-family: 'Roboto';
+			font-size: 20px;
+			font-weight: bold;
+			color: #fff
+		}
+
+		a {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			color: #fff;
+			font-family: 'Roboto';
+			font-size: 20px;
+			margin-bottom: 15px;
+			font-weight: bold;
+			cursor: pointer;
+		}
+
+		a:last-child {
+			margin-bottom: 0;
+		}
+
+		img {
+			width: 30px;
+			height: 30px;
+			margin-right: 20px;
+		}
+	}
+
+	.popupActive {
+		opacity: 1;
+		z-index: 999;
+		visibility: inherit;
+		top: 150px;
+		transition: .3s all;
+	}
 }
 
 @media (max-width: 600px) {
 	.header {
 		.userData {
 			padding: 0 5%;
+		}
+		.popup {
+			left: 5%;
 		}
 	}
 }
@@ -141,6 +200,12 @@
 				}
 			}
 		}
+
+		.popup {
+			h2, a {
+				font-size: 16px;
+			}
+		}
 	}
 }
 
@@ -154,6 +219,10 @@
 					padding: 0 6px;
 				}
 			}
+		}
+
+		.popup {
+			left: 3%;
 		}
 	}
 }
