--- a/src/components/Product/product.module.scss
+++ b/src/components/Product/product.module.scss
@@ -7,6 +7,13 @@
 		font-size: 64px;
 		font-weight: bold;
 		margin-bottom: 70px;
+
+		.star {
+			width: 30px;
+			height: 30px;
+			margin-left: 30px;
+			cursor: pointer;
+		}
 	}
 
 	.subTitle {
